--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
             <id>destroystokyo-repo</id>
             <url>https://repo.destroystokyo.com/repository/maven-public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -70,6 +74,18 @@
             <groupId>io.github.waterfallmc</groupId>
             <artifactId>waterfall-api</artifactId>
             <version>1.15-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- PremiumVanishAPI -->
+        <dependency>
+            <groupId>com.github.MyzelYam</groupId>
+            <artifactId>PremiumVanishAPI</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>net.luckperms</groupId>
+            <artifactId>api</artifactId>
+            <version>5.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
